--- a/aoc2025-haskell.cabal
+++ b/aoc2025-haskell.cabal
@@ -58,7 +58,10 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib, Day1, Day2
+    exposed-modules:  MyLib
+                    , Day1
+                    , Day2
+                    , Day3
 
     -- Modules included in this library but not exported.
     -- other-modules:
