--- a/aoc2025-haskell.cabal
+++ b/aoc2025-haskell.cabal
@@ -62,6 +62,7 @@ library
                     , Day1
                     , Day2
                     , Day3
+                    , Day4
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -72,6 +73,7 @@ library
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.18.3.0
                     , split
+                    , unordered-containers
 
     -- Directories containing source files.
     hs-source-dirs:   src
