--- a/aoc2025-haskell.cabal
+++ b/aoc2025-haskell.cabal
@@ -65,6 +65,7 @@ library
                     , Day4
                     , Day5
                     , Day6
+                    , Day7
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -77,6 +78,7 @@ library
                     , split
                     , unordered-containers
                     , text
+                    , hashable
 
     -- Directories containing source files.
     hs-source-dirs:   src
